# Aion

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md
.github/workflows/: ci.yml  linux.yml  macos.yml  windows.yml
core/include/ast/: ASTContext.hpp  RecursiveAstVisitor.hpp  ShortVec.hpp  StringMap.hpp  ast.hpp  decl.hpp  expr.hpp  printer.hpp  stmt.hpp  type.hpp
core/include/cli/: CompilerInvocation.hpp  compiler_config.hpp  compiler_invocation.hpp
core/include/error/: DiagnosticSeverity.hpp  diagid.hpp  error.hpp
core/include/lexer/: lexer.hpp
core/include/parser/: GrammarStream.hpp  parser.hpp
core/include/parser/docs/: GrammarStream.md
core/include/support/: global_constants.hpp  source_manager.hpp
core/src/ast/: ASTContext.cpp  RecursiveAstVisitor.cpp  ast.cpp  decl.cpp  expr.cpp  printer.cpp  stmt.cpp  type.cpp
core/src/cli/: CompilerInvocation.cpp  compiler_invocation.cpp  main.cpp
core/src/error/: error.cpp
core/src/lexer/: lexer.cpp
core/src/parser/: GrammarStream.cpp  parser.cpp  parser_decl.cpp  parser_expression.cpp
core/src/preprocessor/: preprocessor.cpp
core/src/support/: source_manager.cpp
docs/: DiagnosticsEngine.md  value_passing_semantics.md
html/: _a_s_t_context_8hpp_source.html  _compiler_invocation_8hpp_source.html  _diagnostic_severity_8hpp_source.html  _recursive_ast_visitor_8hpp_source.html  _short_vec_8hpp_source.html  _string_map_8hpp_source.html  add__const_8h_source.html  add__lvalue__reference_8h_source.html  add__pointer_8h_source.html  add__rvalue__reference_8h_source.html  add__volatile_8h_source.html  align_8hpp_source.html  allocator_8h_source.html  allocator__traits_8h_source.html  annotated.html  annotated_dup.js  arena_8h_source.html  arena__traits_8h_source.html  argparse_8hpp_source.html  ast_8hpp_source.html  basic__ios_8hpp_source.html  basic__string_8hpp_source.html  char__traits_8hpp_source.html  class_compiler___invocation-members.html  class_compiler___invocation.html  class_compiler___invocation.js  class_compiler_invocation-members.html  class_compiler_invocation.html  class_compiler_invocation.js  class_preprocessor-members.html  class_preprocessor.html  class_preprocessor.js  classaion_1_1_source_manager-members.html  classaion_1_1_source_manager.html  classaion_1_1_source_manager.js  classaion_1_1ast_1_1_a_s_t_context-members.html  classaion_1_1ast_1_1_a_s_t_context.html  classaion_1_1ast_1_1_a_s_t_context.js  classaion_1_1ast_1_1_a_s_t_context_1_1_bump_ptr_allocator-members.html  classaion_1_1ast_1_1_a_s_t_context_1_1_bump_ptr_allocator.html  (+792 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  concepts_0.js  enums_0.js  (+45 more)
latex/: _a_s_t_context_8hpp_source.tex  _compiler_invocation_8hpp_source.tex  _diagnostic_severity_8hpp_source.tex  _recursive_ast_visitor_8hpp_source.tex  _short_vec_8hpp_source.tex  _string_map_8hpp_source.tex  add__const_8h_source.tex  add__lvalue__reference_8h_source.tex  add__pointer_8h_source.tex  add__rvalue__reference_8h_source.tex  add__volatile_8h_source.tex  align_8hpp_source.tex  allocator_8h_source.tex  allocator__traits_8h_source.tex  annotated.tex  arena_8h_source.tex  arena__traits_8h_source.tex  argparse_8hpp_source.tex  ast_8hpp_source.tex  basic__ios_8hpp_source.tex  basic__string_8hpp_source.tex  char__traits_8hpp_source.tex  class_compiler___invocation.tex  class_compiler_invocation.tex  class_preprocessor.tex  classaion_1_1_source_manager.tex  classaion_1_1ast_1_1_a_s_t_context.tex  classaion_1_1ast_1_1_a_s_t_context_1_1_bump_ptr_allocator.tex  classaion_1_1ast_1_1_a_s_t_context_1_1_string_map.tex  classaion_1_1ast_1_1_ast_printer.eps  classaion_1_1ast_1_1_ast_printer.tex  classaion_1_1ast_1_1_binary_expr.eps  classaion_1_1ast_1_1_binary_expr.tex  classaion_1_1ast_1_1_builtin_type.eps  classaion_1_1ast_1_1_builtin_type.tex  classaion_1_1ast_1_1_call_expr.eps  classaion_1_1ast_1_1_call_expr.tex  classaion_1_1ast_1_1_compound_stmt.eps  classaion_1_1ast_1_1_compound_stmt.tex  classaion_1_1ast_1_1_decl.eps  (+523 more)
spec/: bundle.md  casting.md  code_golfing.md  error_redesign_proposal.md  ex_channel_proposal.md  exception.md  expressions.md  type.md  variable_decl.md
syntax/: bloated_ast.aion  ex.aion  ex.spec.aion  expressions.kai  function.aion  functions.aion  generics.aion  looping.kai  looping.spec.kai  multiline_range_error.aion  reflection.aion  variable.aion  variable_edge_cases.aion  variables.kai  variables.spec.kai
test/: CMakeLists.txt  main.cpp  variables.aion
test/ast/: ast_test.cpp  ast_test.hpp
test/cli/: cli_test.cpp  cli_test.hpp
test/codegen/: codegen_test.cpp  codegen_test.hpp
test/error/: error_test.cpp  error_test.hpp
test/lexer/: lexer_test.cpp  lexer_test.hpp
test/parser/: grammar_stream_test.cpp  parser_test.cpp  parser_test.hpp
test/preprocessor/: preprocessor_test.cpp  preprocessor_test.hpp
test/suite/: aion_test.hpp  aion_test_docs.md
test/support/: source_manager_test.cpp  source_manager_test.hpp
